<resources>
    <string name="app_name">KotlinAndroidAPIDemos</string>
    <!--Android Feature List-->
    <string name="ui_widgets">UIWidgets</string>
    <string name="ui_widgets_desc">UI Widgets/Controls demo using Kotlin</string>
    <string name="multi_threading">MultiThreading</string>
    <string name="multi_threading_desc">MultiThreading demo using Kotlin</string>
    <string name="data_storage">Data Storage</string>
    <string name="data_storage_desc">Data Storage demo using Kotlin</string>
    <string name="http_networking">Http Networking</string>
...
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_success">success</string>
    <string name="login_failed">failed</string>
</resources>

